--- a/config/saleh/UGV8Maze_config.yaml
+++ b/config/saleh/UGV8Maze_config.yaml
@@ -25,7 +25,8 @@ behaviors:
         encoding_size: 256
         learning_rate: 0.0003
     keep_checkpoints: 5
-    max_steps: 10000000
+    max_steps: 150000000
     time_horizon: 1000
     summary_freq: 30000
     threaded: true
+    init_path: D:\UnityProjects\ml-agents\results\UGV8Maze\UGV8Maze
