--- a/config/saleh/UGV8MazeRND3_config.yaml
+++ b/config/saleh/UGV8MazeRND3_config.yaml
@@ -5,15 +5,15 @@ behaviors:
       batch_size: 2048
       buffer_size: 20480
       learning_rate: 0.0001
-      beta: 0.01
+      beta: 0.005
       epsilon: 0.2
       lambd: 0.95
       num_epoch: 3
       learning_rate_schedule: linear
     network_settings:
-      normalize: true
+      normalize: false
       hidden_units: 512
-      num_layers: 2
+      num_layers: 3
       vis_encode_type: simple
     reward_signals:
       extrinsic:
