--- a/config/saleh/UGV11PathLegs_config.yaml
+++ b/config/saleh/UGV11PathLegs_config.yaml
@@ -11,7 +11,7 @@ behaviors:
       num_epoch: 3
       learning_rate_schedule: linear
     network_settings:
-      normalize: false
+      normalize: true
       hidden_units: 512
       num_layers: 3
       vis_encode_type: simple
@@ -20,7 +20,7 @@ behaviors:
         gamma: 0.995
         strength: 1.0
     keep_checkpoints: 5
-    max_steps: 30000000
+    max_steps: 300000000
     time_horizon: 1000
     summary_freq: 300000
     threaded: true
