--- a/config/saleh/UGV1Log_config.yaml
+++ b/config/saleh/UGV1Log_config.yaml
@@ -1,5 +1,5 @@
 behaviors:
-  UGV13PathLegsObstaclesDiff:
+  UGV1:
     trainer_type: ppo
     hyperparameters:
       batch_size: 2048
@@ -20,7 +20,7 @@ behaviors:
         gamma: 0.995
         strength: 1.0
     keep_checkpoints: 5
-    max_steps: 10000000
-    time_horizon: 10
-    summary_freq: 250000
+    max_steps: 30000000
+    time_horizon: 1000
+    summary_freq: 30000
     threaded: true
